--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
     # Build apk.
     - run: flutter build apk
     
-    # Upload generated apk to the artifacts.
+    # Upload generated apk to the artifacts.1
     - uses: actions/upload-artifact@v1
       with:
         name: release-apk
