--- a/.github/workflows - BK/main-flutter test work.yml
+++ b/.github/workflows - BK/main-flutter test work.yml
@@ -39,10 +39,10 @@ jobs:
     - name: Run Flutter Test
       run: flutter test
     # Build apk.
-    #- run: flutter build apk
+    - run: flutter build apk
     
     # Upload generated apk to the artifacts.1
-    #- uses: actions/upload-artifact@v1
-    #  with:
-    #    name: release-apk
-    #    path: build/app/outputs/apk/release/app-release.apk
+    - uses: actions/upload-artifact@v1
+      with:
+        name: release-apk
+        path: build/app/outputs/apk/release/app-release.apk
