--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,35 +14,13 @@ on:
     
 jobs:
   build:
-    # This job will run on ubuntu virtual machine
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
-    
-    # Setup Java environment in order to build the Android app.
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
-      with:
-        java-version: '12.x'
-    
-    # Setup the flutter environment.
-    - uses: subosito/flutter-action@v1
+    - uses: actions/checkout@v3
+    - uses: subosito/flutter-action@v2
       with:
         channel: 'stable'
-        # flutter-version: '1.12.x' # you can also specify exact version of flutter
-    
-    # Get flutter dependencies.
+        architecture: x64
     - run: flutter pub get
-    
-    # Statically analyze the Dart code for any errors.
-    #- run: flutter analyze .
-
-    - name: Run Flutter Test
-      run: flutter test
-    # Build apk.
-    #- run: flutter build apk
-    
-    # Upload generated apk to the artifacts.1
-    #- uses: actions/upload-artifact@v1
-    #  with:
-    #    name: release-apk
-    #    path: build/app/outputs/apk/release/app-release.apk
+    - run: flutter test
+    - run: flutter build ios --release --no-codesign
