--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,18 +13,13 @@ on:
 # on: push    # Default will running for every branch.
     
 jobs:
-  build:
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v3
-    - uses: subosito/flutter-action@v2
-    with:
-        channel: 'stable'
-        cache: true
-        cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:' # optional, change this to force refresh cache
-        cache-path: ${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch: # optional, change this to specify the cache path
-        architecture: x64 # optional, x64 or arm64
-    - run: flutter --version
-    - run: flutter pub get
-    - run: flutter test
-    - run: flutter build ios --release --no-codesign
+ build:
+   runs-on: macos-latest
+   steps:
+     - uses: actions/checkout@v3
+     - uses: subosito/flutter-action@v2
+       with:
+         channel: 'stable'
+         architecture: x64
+     - run: flutter config --enable-macos-desktop
+     - run: flutter build macos
