--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
      - uses: subosito/flutter-action@v2
        with:
          channel: 'stable'
+         cache: true
          architecture: x64
-     - run: flutter config --enable-macos-desktop
-     - run: flutter build macos
+     #- run: flutter config --enable-macos-desktop
+     #- run: flutter build macos
+     - run: flutter test
