--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
        with:
          channel: 'stable'
          cache: true
-         architecture: x64
+         architecture: arm64
      #- run: flutter config --enable-macos-desktop
      #- run: flutter build macos
      - run: flutter test
