--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
       url: https://github.com/KolasikOmetov/circle_wheel_scroll
       ref: null_safety_and_endless_scrolling
   cached_network_image: ^3.1.0
+  json_annotation: any
 
 dev_dependencies:
   flutter_test:
