--- a/.github/workflows - MACOS CACHE/main.yml
+++ b/.github/workflows - MACOS CACHE/main.yml
@@ -17,14 +17,11 @@ jobs:
    runs-on: macos-latest
    steps:
      - uses: actions/checkout@v3
-     - uses: actions/setup-java@v2
-       with:
-        distribution: 'zulu'
-        java-version: '11'
      - uses: subosito/flutter-action@v2
        with:
-        flutter-version: '3.0.5'
-     - run: flutter pub get
+         channel: 'stable'
+         cache: true
+         architecture: x64
+     #- run: flutter config --enable-macos-desktop
+     #- run: flutter build macos
      - run: flutter test
-     - run: flutter build apk
-     - run: flutter build appbundle
