--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
        with:
         flutter-version: '3.0.5'
      - run: flutter pub get
+     - run: flutter pub cache repair
+     - run: flutter clean
      #- run: flutter test
      - run: flutter build apk
      - run: flutter build appbundle
