--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,12 @@ jobs:
        with:
         flutter-version: '3.0.5'
      - run: flutter pub get
-     - run: flutter pub cache repair
-     - run: flutter clean
+     #- run: flutter pub cache repair
+     #- run: flutter clean
      #- run: flutter test
      - run: flutter build apk
      - run: flutter build appbundle
+     - uses: actions/upload-artifact@v1
+       with:
+         name: release-apk
+         path: build/app/outputs/apk/release/app-release.apk
